Batch improvements
SVN-Revision: 788