@@ -1,20 +1,11 @@
 package gov.nih.nci.hpc.cli;
 
-import gov.nih.nci.hpc.cli.domain.HPCBatchCollection;
-import gov.nih.nci.hpc.cli.util.HpcConfigProperties;
-import gov.nih.nci.hpc.domain.datatransfer.HpcDataTransferLocations;
-import gov.nih.nci.hpc.domain.datatransfer.HpcFileLocation;
-import gov.nih.nci.hpc.domain.metadata.HpcMetadataEntry;
-import gov.nih.nci.hpc.dto.datamanagement.HpcDataObjectRegistrationDTO;
-import gov.nih.nci.hpc.dto.error.HpcExceptionDTO;
-import gov.nih.nci.hpc.cli.util.BasicAuthRestTemplate;
-
-import java.beans.Introspector;
-import java.beans.PropertyDescriptor;
 import java.io.File;
 import java.io.FileReader;
 import java.io.FileWriter;
 import java.io.IOException;
+import java.io.PrintWriter;
+import java.io.StringWriter;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
 import java.util.Date;
@@ -23,8 +14,6 @@ import java.util.Map;
 import java.util.Map.Entry;
 
 import javax.xml.bind.DatatypeConverter;
-
-import java.net.URLEncoder;
 
 import org.apache.commons.csv.CSVFormat;
 import org.apache.commons.csv.CSVParser;
@@ -37,264 +26,250 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
-import org.springframework.http.converter.FormHttpMessageConverter;
-import org.springframework.http.converter.HttpMessageConverter;
-import org.springframework.http.converter.StringHttpMessageConverter;
-import org.springframework.http.converter.json.MappingJackson2HttpMessageConverter;
 import org.springframework.stereotype.Component;
-import org.springframework.web.client.HttpStatusCodeException;
 import org.springframework.web.client.RestClientException;
 import org.springframework.web.client.RestTemplate;
 
+import gov.nih.nci.hpc.cli.util.Constants;
+import gov.nih.nci.hpc.cli.util.HpcClientUtil;
+import gov.nih.nci.hpc.cli.util.HpcConfigProperties;
+import gov.nih.nci.hpc.domain.datatransfer.HpcFileLocation;
+import gov.nih.nci.hpc.domain.metadata.HpcMetadataEntry;
+import gov.nih.nci.hpc.dto.datamanagement.HpcDataObjectRegistrationDTO;
+import gov.nih.nci.hpc.dto.error.HpcExceptionDTO;
+
 @Component
-public class HPCDatafiles {
+public class HPCDatafiles extends HPCBatchClient {
 	@Autowired
 	private HpcConfigProperties configProperties;
-	
+
 	public HPCDatafiles() {
 		super();
 	}
 
-	
-	public String parseBatchFile(String fileName) {
-		try
-		{
-			jline.console.ConsoleReader reader = new jline.console.ConsoleReader();
-			reader.setExpandEvents(false);
-			System.out.println("Enter NCI Login UserId:");
-			String userId = reader.readLine();
-			
-			System.out.println("Enter NCI Login password:");
-			String password = reader.readLine(new Character('*'));
-			System.out.println("Initiating batch process as NCI Login UserId:" +userId);
-
-			boolean success = readCsvFile(fileName, userId, password);
-			if(success)
-				return "Batch Upload Successful";
-			else
-				return "Batch Upload is not Successful. Please error log for the records not processed.";
-		}
-		catch(IOException e)
-		{
-			e.printStackTrace();
-			return "Failed to run batch registration";
-		}
-	}
-
-
-	
-	private boolean readCsvFile(String fileName, String userId, String password) {
+	protected boolean processFile(String fileName, String userId, String password) {
 		boolean success = true;
-		String hpcServerURL = configProperties.getProperty("hpc.server.url");
-		String irodsZoneHome = configProperties.getProperty("irods.default.zoneHome");//rods
-		String hpcDestinationEndpoint = configProperties.getProperty("hpc.destination.endpoint");
-		String hpcDestinationPath = configProperties.getProperty("hpc.destination.path");
-		String irodsUsername = configProperties.getProperty("irods.username");
-		
 		FileReader fileReader = null;
-		
+
 		CSVParser csvFileParser = null;
-		String hpcDataService = null;
-		
-		//Create the CSVFormat object with the header mapping
-        CSVFormat csvFileFormat = CSVFormat.DEFAULT.withHeader();
-     
-        try {
-        	            
-            //initialize FileReader object
-            fileReader = new FileReader(fileName);
-           
-            //initialize CSVParser object
-            csvFileParser = new CSVParser(fileReader, csvFileFormat);
-            
-            Map<String, Integer> headersMap = csvFileParser.getHeaderMap();
-    
-            //Get a list of CSV file records
-            List<CSVRecord> csvRecords = csvFileParser.getRecords(); 
-            String collName = null;
-            //Read the CSV file records starting from the second record to skip the header
-            for (int i = 0; i < csvRecords.size(); i++) {
-            	CSVRecord record = csvRecords.get(i);
-            	String[] fields=new String[record.size()];
+		// Create the CSVFormat object with the header mapping
+		CSVFormat csvFileFormat = CSVFormat.DEFAULT.withHeader();
+		ResponseEntity<HpcExceptionDTO> response = null;
+		try {
 
-            	List<HpcMetadataEntry> listOfhpcCollection = new ArrayList<HpcMetadataEntry>();
-              	for (Entry<String, Integer> entry : headersMap.entrySet()) { 
-              			String cellVal = record.get( entry.getKey());
-            			HpcMetadataEntry hpcMetadataEntry = new HpcMetadataEntry();
-            			hpcMetadataEntry.setAttribute(entry.getKey());
-            			hpcMetadataEntry.setValue(cellVal);
-            			if (StringUtils.isNotBlank(cellVal))
-            				listOfhpcCollection.add(hpcMetadataEntry);
-            		}            		              	  
+			// initialize FileReader object
+			fileReader = new FileReader(fileName);
 
-              	HpcDataObjectRegistrationDTO hpcDataObjectRegistrationDTO = new HpcDataObjectRegistrationDTO();
+			// initialize CSVParser object
+			csvFileParser = new CSVParser(fileReader, csvFileFormat);
+
+			Map<String, Integer> headersMap = csvFileParser.getHeaderMap();
+
+			// Get a list of CSV file records
+			List<CSVRecord> csvRecords = csvFileParser.getRecords();
+			String collName = null;
+			// Read the CSV file records starting from the second record to skip
+			// the header
+			for (int i = 0; i < csvRecords.size(); i++) {
+				CSVRecord record = csvRecords.get(i);
+            	boolean processedRecordFlag = true;
+
+				List<HpcMetadataEntry> listOfhpcCollection = new ArrayList<HpcMetadataEntry>();
+				for (Entry<String, Integer> entry : headersMap.entrySet()) {
+					String cellVal = record.get(entry.getKey());
+					HpcMetadataEntry hpcMetadataEntry = new HpcMetadataEntry();
+					hpcMetadataEntry.setAttribute(entry.getKey());
+					hpcMetadataEntry.setValue(cellVal);
+					if (StringUtils.isNotBlank(cellVal))
+						listOfhpcCollection.add(hpcMetadataEntry);
+				}
+
+				HpcDataObjectRegistrationDTO hpcDataObjectRegistrationDTO = new HpcDataObjectRegistrationDTO();
 				hpcDataObjectRegistrationDTO.getMetadataEntries().addAll(listOfhpcCollection);
-            	  	
-    			HpcDataTransferLocations locations = new HpcDataTransferLocations();
-    			HpcFileLocation source = new HpcFileLocation();
-    			source.setEndpoint(getAttributeValueByName("File Source (Globus Origin endpoint)",hpcDataObjectRegistrationDTO));
-    			String filePath = getAttributeValueByName("Source File Path",hpcDataObjectRegistrationDTO) + "/"+getAttributeValueByName("File name",hpcDataObjectRegistrationDTO);
-        		System.out.println("Adding file from " + filePath);
-    			source.setPath(filePath);
-    			HpcFileLocation destination = new HpcFileLocation();
-    			destination.setEndpoint(hpcDestinationEndpoint);
-    			destination.setPath(hpcDestinationPath);
-    			locations.setDestination(destination);
-    			locations.setSource(source);
-    			hpcDataObjectRegistrationDTO.setLocations(locations);
-    		    collName = getAttributeValueByName("File name",hpcDataObjectRegistrationDTO);	    		    
-    		    hpcDataService = configProperties.getProperty("hpc.dataobject.service");
-				String parentCollection = getAttributeValueByName("Parent Collection Path (Logical Path)",hpcDataObjectRegistrationDTO);
+
+				HpcFileLocation source = new HpcFileLocation();
+				source.setEndpoint(
+						getAttributeValueByName(Constants.FILE_SOURCE_ENDPOINT, hpcDataObjectRegistrationDTO));
+				String filePath = getAttributeValueByName(Constants.FILE_SOURCE_FILE_PATH, hpcDataObjectRegistrationDTO)
+						+ "/" + getAttributeValueByName(Constants.FILE_NAME, hpcDataObjectRegistrationDTO);
+				//String destinationPath = getAttributeValueByName(Constants.DESTINATION_PATH, hpcDataObjectRegistrationDTO);
+				System.out.println("Adding file from " + filePath);
+				source.setPath(filePath);
 				
-				if(parentCollection != null)
+				hpcDataObjectRegistrationDTO.setSource(source);
+				hpcDataObjectRegistrationDTO.setFilePath("/");
+				collName = getAttributeValueByName(Constants.FILE_NAME, hpcDataObjectRegistrationDTO);
+				String parentCollection = getAttributeValueByName(Constants.COLLECTION_PATH,
+						hpcDataObjectRegistrationDTO);
+				if (parentCollection != null)
 					collName = parentCollection + "/" + collName;
-					//collName = URLEncoder.encode(parentCollection) + "/" + URLEncoder.encode(collName);
-
-				 List<HttpMessageConverter<?>> messageConverters = new ArrayList<HttpMessageConverter<?>>();
-				 messageConverters.add(new FormHttpMessageConverter());
-				 messageConverters.add(new StringHttpMessageConverter());
-				 messageConverters.add(new MappingJackson2HttpMessageConverter());
-				 RestTemplate restTemplate = new RestTemplate();
-
-				 restTemplate.setMessageConverters(messageConverters);
-				//BasicAuthRestTemplate restTemplate = new BasicAuthRestTemplate(userId, password);
+				// collName = URLEncoder.encode(parentCollection) + "/" +
+				// URLEncoder.encode(collName);
+				RestTemplate restTemplate = HpcClientUtil.getRestTemplate(userId, password,hpcCertPath, hpcCertPassword);
 				HttpHeaders headers = new HttpHeaders();
-				String token =DatatypeConverter.printBase64Binary((userId + ":" + password).getBytes());
-				//byte[] token = Base64.getEncoder().encode(
-					//	(this.username + ":" + this.password).getBytes());
-				headers.add("Authorization", "Basic " + token);				
-				List <MediaType> mediaTypeList = new ArrayList<MediaType>();
+				String token = DatatypeConverter.printBase64Binary((userId + ":" + password).getBytes());
+				headers.add("Authorization", "Basic " + token);
+				List<MediaType> mediaTypeList = new ArrayList<MediaType>();
 				mediaTypeList.add(MediaType.APPLICATION_JSON);
 				headers.setAccept(mediaTypeList);
-				HttpEntity<HpcDataObjectRegistrationDTO> entity = new HttpEntity<HpcDataObjectRegistrationDTO>(hpcDataObjectRegistrationDTO, headers);
-				try
-				{
-					System.out.println(hpcServerURL + "/"+ hpcDataService +"/" +irodsZoneHome+"/"+userId+"/"+collName);
-					ResponseEntity<HpcExceptionDTO> response = restTemplate.exchange(hpcServerURL + "/"+ hpcDataService +"/" +irodsZoneHome+"/"+userId+"/"+collName, HttpMethod.PUT,entity , HpcExceptionDTO.class);
-				}
-				catch (HttpStatusCodeException e) {
-					System.out.println("Cannot add Dataobject/Collection " + collName + "Due to " +  e.getMessage());
-					//System.out.println("Adding to error log ");
-					//message = getErrorMessage(e.getResponseBodyAsString());
-					addToErrorCollection(e.getResponseBodyAsString(),record, headersMap);
-					success = false;
-					continue;
-					
+
+				HttpEntity<HpcDataObjectRegistrationDTO> entity = new HttpEntity<HpcDataObjectRegistrationDTO>(
+						hpcDataObjectRegistrationDTO, headers);
+				try {
+					if (!collName.startsWith("/"))
+						collName = "/" + collName;
+
+					System.out.println(hpcServerURL + "/" + hpcDataService +  "/" + collName);
+					response = restTemplate.exchange(
+							hpcServerURL + "/" + hpcDataService + collName, HttpMethod.PUT,
+							entity, HpcExceptionDTO.class);
+					if(response != null)
+					{
+						HpcExceptionDTO exception = response.getBody();
+						if(exception != null)
+						{
+							String message = "Failed to process record due to: "+exception.getMessage() + ": Error Type:"+exception.getErrorType().value() + ": Request reject reason: "+exception.getRequestRejectReason().value();
+							addErrorToLog(message, i+1);
+							success = false;
+							processedRecordFlag = false;
+							addRecordToLog(record, headersMap);
+						}else if(!(response.getStatusCode().equals(HttpStatus.CREATED) || response.getStatusCode().equals(HttpStatus.OK)))
+						{
+							addErrorToLog("Failed to process record due to unknown error. Return code: " + response.getStatusCode(), i+1);
+							success = false;
+							processedRecordFlag = false;
+							addRecordToLog(record, headersMap);
+						}
+					}
 				} catch (RestClientException e) {
-					e.printStackTrace();
+					//e.printStackTrace();
 					success = false;
-					//message = "Client error occured while adding collection :" + e.getMessage();
-					// System.out.println("message2::"+message);
+					processedRecordFlag = false;
+					String message = "Failed to process record due to: "+e.getMessage();
+					System.out.println(message);
+					addErrorToLog(message, i+1);
+					StringWriter sw = new StringWriter();
+					e.printStackTrace(new PrintWriter(sw));
+					String exceptionAsString = sw.toString();
+					addErrorToLog(exceptionAsString, i+1);
+					addRecordToLog(record, headersMap);
 				} catch (Exception e) {
-					e.printStackTrace();
+					//e.printStackTrace();
 					success = false;
-					//message = "Exception occured while adding metadata :" + e.getMessage();
-					// System.out.println("message3::"+message);
+					processedRecordFlag = false;
+					String message = "Failed to process record due to: "+e.getMessage();
+					System.out.println(message);
+					addErrorToLog(message, i+1);	
+					StringWriter sw = new StringWriter();
+					e.printStackTrace(new PrintWriter(sw));
+					String exceptionAsString = sw.toString();
+					addErrorToLog(exceptionAsString, i+1);
+					addRecordToLog(record, headersMap);
 				}
-              	
+              	if(processedRecordFlag)
+              		System.out.println("Success!");
+              	else
+              		System.out.println("Failure!");
+          		System.out.println("---------------------------------");
+          		
 			}
-            
-        } 
-        catch (Exception e) {
-        	System.out.println("Cannot read the input file");
-            e.printStackTrace();
-        } finally {
-            try {
-                fileReader.close();
-                csvFileParser.close();
-            } catch (IOException e) {
-            	System.out.println("Error while closing fileReader/csvFileParser !!!");
-                e.printStackTrace();
-            }
-        }
-        return success;
+
+		} catch (Exception e) {
+			System.out.println("Cannot read the input file");
+			StringWriter sw = new StringWriter();
+			e.printStackTrace(new PrintWriter(sw));
+			String exceptionAsString = sw.toString();
+			try {
+				addErrorToLog(exceptionAsString, 0);
+			} catch (IOException e1) {
+				// TODO Auto-generated catch block
+				e1.printStackTrace();
+			}
+		} finally {
+			try {
+				fileReader.close();
+				csvFileParser.close();
+			} catch (IOException e) {
+				System.out.println("Error while closing fileReader/csvFileParser !!!");
+			}
+		}
+		return success;
 
 	}
-	
-	private void addToErrorCollection(String responseBodyAsString,CSVRecord record,Map<String, Integer> headers) {
+
+	/*
+	 * private RestTemplate getRestTemplate(String userId, String password) {
+	 * CloseableHttpClient httpClient = HttpClients.custom()
+	 * .setSSLHostnameVerifier(new NoopHostnameVerifier()) .build();
+	 * HttpComponentsClientHttpRequestFactory requestFactory = new
+	 * HttpComponentsClientHttpRequestFactory();
+	 * requestFactory.setHttpClient(httpClient); RestTemplate restTemplate = new
+	 * RestTemplate(requestFactory); List<HttpMessageConverter<?>>
+	 * messageConverters = new ArrayList<HttpMessageConverter<?>>();
+	 * messageConverters.add(new FormHttpMessageConverter());
+	 * messageConverters.add(new StringHttpMessageConverter());
+	 * messageConverters.add(new MappingJackson2HttpMessageConverter());
+	 * 
+	 * restTemplate.setMessageConverters(messageConverters); return
+	 * restTemplate; }
+	 */
+	private void addToErrorCollection(String message, CSVRecord record, Map<String, Integer> headers) {
 		String logDir = configProperties.getProperty("hpc.error-log.dir");
-		
+
 		JSONParser parser = new JSONParser();
 		JSONObject hpcException = null;
-	    FileWriter fileWriter = null;
+		FileWriter fileWriter = null;
 		CSVPrinter csvFilePrinter = null;
-		CSVFormat csvFileFormat = CSVFormat.DEFAULT.withRecordSeparator("\n");		
+		CSVFormat csvFileFormat = CSVFormat.DEFAULT.withRecordSeparator("\n");
 
-			 try 
-			 {
-				String logFile = logDir +"/"+"errorLog"+  new SimpleDateFormat("yyyyMMddhhmm'.csv'").format(new Date());
-	    		File file =new File(logFile);
-	    		if(!file.exists()){
-	    			file.createNewFile();
-	    		}				 
-				 fileWriter = new FileWriter(file,true);
-			 	 csvFilePrinter = new CSVPrinter(fileWriter, csvFileFormat);
-			 	 Object [] headerArray =  new ArrayList<Object>(headers.keySet()).toArray();
-			 	 if(!checkIfHeaderExists(logFile))
-			 		 csvFilePrinter.printRecord(headerArray);
-			 	 else
-			 		 csvFilePrinter.println();
-			 	 for (Entry<String, Integer> entry : headers.entrySet()) { 			 		
-			 		csvFilePrinter.print(record.get(entry.getKey()));		                 							 		
-			 	 } 
-				 System.out.println(responseBodyAsString);
-				 JSONObject jsonObject = (JSONObject) parser.parse(responseBodyAsString);
-				 hpcException = (JSONObject) jsonObject.get("gov.nih.nci.hpc.dto.error.HpcExceptionDTO");
-				 if(hpcException == null)
-					csvFilePrinter.print(jsonObject.get("message"));
-				 else
-					csvFilePrinter.print(hpcException.get("message"));			 	
-			 	System.out.println("Log entry successfull");
-			  } 
-			 catch (Exception e) 
-			 {
-			      System.out.println("Error in Writing the error log !!!");
-			      e.printStackTrace();
-			 }
-			 finally 
-			 {			     
-                  try 
-                  {
-                      fileWriter.flush();
-                      fileWriter.close();			   
-                      csvFilePrinter.close();			   
-                  }
-                  catch (IOException e) {		      
-                      System.out.println("Error while flushing/closing fileWriter/csvPrinter !!!");		     
-                      e.printStackTrace();		      
-                  }
-			 }
-			//return (String) exceptioDTO.get("message");
+		try {
+			String logFile = logDir + "/" + "errorLog" + new SimpleDateFormat("yyyyMMddhhmm'.csv'").format(new Date());
+			File file = new File(logFile);
+			if (!file.exists()) {
+				file.createNewFile();
+			}
+			fileWriter = new FileWriter(file, true);
+			csvFilePrinter = new CSVPrinter(fileWriter, csvFileFormat);
+			Object[] headerArray = new ArrayList<Object>(headers.keySet()).toArray();
+			if (!checkIfHeaderExists(logFile))
+				csvFilePrinter.printRecord(headerArray);
+			else
+				csvFilePrinter.println();
+			for (Entry<String, Integer> entry : headers.entrySet()) {
+				csvFilePrinter.print(record.get(entry.getKey()));
+			}
+			csvFilePrinter.print(message);
+		} catch (Exception e) {
+			System.out.println("Error in Writing the error log !!!");
+			e.printStackTrace();
+		} finally {
+			try {
+				fileWriter.flush();
+				fileWriter.close();
+				csvFilePrinter.close();
+			} catch (IOException e) {
+				System.out.println("Error while flushing/closing fileWriter/csvPrinter !!!");
+				e.printStackTrace();
+			}
+		}
+		// return (String) exceptioDTO.get("message");
 	}
-
 
 	private boolean checkIfHeaderExists(String logFile) throws IOException {
-        CSVFormat csvFileFormat = CSVFormat.DEFAULT.withHeader();
-        FileReader fileReader = new FileReader(logFile);
-        CSVParser csvFileParser = new CSVParser(fileReader, csvFileFormat);
-        Map<String, Integer> headersMap = csvFileParser.getHeaderMap();
-        //System.out.println("HEADER MAP::" + headersMap);
-        if(headersMap != null &&  !headersMap.isEmpty())
-        	return true;
-        else
-        	return false;
+		CSVFormat csvFileFormat = CSVFormat.DEFAULT.withHeader();
+		FileReader fileReader = new FileReader(logFile);
+		CSVParser csvFileParser = new CSVParser(fileReader, csvFileFormat);
+		Map<String, Integer> headersMap = csvFileParser.getHeaderMap();
+		// System.out.println("HEADER MAP::" + headersMap);
+		if (headersMap != null && !headersMap.isEmpty())
+			return true;
+		else
+			return false;
 	}
 
-
-	private List<HpcMetadataEntry> getListOfMetadataElements(HPCBatchCollection batchCollection) throws Exception {
-		List<HpcMetadataEntry> listOfhpcCollection = new ArrayList<HpcMetadataEntry>();
-		for(PropertyDescriptor propertyDescriptor : 
-		    Introspector.getBeanInfo(batchCollection.getClass()).getPropertyDescriptors()){
-
-		    System.out.println(propertyDescriptor.getReadMethod().invoke(batchCollection, null));
-		}
-		
-		return listOfhpcCollection;
-	}
-	
-	
 	private String getAttributeValueByName(String collectionType,
 			HpcDataObjectRegistrationDTO hpcDataObjectRegistrationDTO) {
 		for (HpcMetadataEntry hpcMetadataEntry : hpcDataObjectRegistrationDTO.getMetadataEntries()) {
